# OS-agent-slim

./: .env.example  .gitignore  .mcp.json  AGENTS.md  APPROVAL_RESUME_SPEC.md  CHANGELOG.md  CLAUDE.md  CLOSED_LOOP_AUDIT.md  CLOSED_LOOP_REFACTOR_PLAN.md  CONFIGURE_PROMPT.md  CONTEXT_COMPRESSION_GUARD_SPEC.md  DASHBOARD_OBSERVER_AUDIT.md  DASHBOARD_OBSERVER_REFACTOR_PLAN.md  DASHBOARD_OBSERVER_SPEC.md  DASHBOARD_RUN_DETAIL_SPEC.md  DEPLOYMENT_AND_TESTING_GUIDE.md  DEPLOYMENT_TEST_AUDIT.md  Dockerfile  EXPERIMENT_REPRODUCIBILITY_REPORT.md  FINAL_CLOSED_LOOP_AUDIT.md  FINAL_CLOSED_LOOP_HARDENING_AUDIT.md  FINAL_DASHBOARD_SYNC_AUDIT.md  FINAL_INTEGRATION_TEST_AUDIT.md  IMPLEMENTATION_LOG.md  MANUAL_TEST_GUIDE.md  MCP_INTEGRATION_GUIDE.md  OPENCODE_TEST_PROMPT.md  PRODUCTION_CODE_AUDIT.md  PRODUCTION_HARDENING_PLAN.md  README.md  REAL_LLM_E2E_REPORT.md  ROADMAP.md  RUN_LIFECYCLE_SPEC.md  SAAS_SECURITY_MODEL.md  SELF_IMPROVEMENT_PROOF_SPEC.md  TEMPORAL_MEMORY_SPEC.md  UPDATED_README.md  VALIDATION_GATE_SPEC.md  docker-compose.yml  install.sh  (+6 more)
.claude/: mcp.json
.omo/: session_context.md
.opencode/: mcp.json
api/: index.py
docs/: CLAUDE_CODE_MCP_SETUP.md  CLI_FIRST_GUIDE.md  CLOUD_CONTROL_CENTER_ARCHITECTURE.md  CORE_LOOP_AUDIT.md  CORE_LOOP_REFACTOR_PLAN.md  CORE_LOOP_STATUS_AUDIT.md  CURATOR_LOOP_SPEC.md  DASHBOARD_SYNC_AUDIT.md  DASHBOARD_SYNC_STATUS_AUDIT.md  DEVELOPER_QUICKSTART.md  EFFECTIVENESS_EVALUATION_GUIDE.md  IMPLEMENTATION_LOG.md  MIGRATION_GUIDE.md  OPENCLAW_SKILLOS_SLIM_DEPLOYMENT.md  OPENCLAW_SLIM_DEPLOYMENT.md  REDUNDANCY_AND_DEPRECATION_AUDIT.md  (+17 more)
(+492 files in other folders)
