[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stableagent-os"
version = "5.0.0"
description = "StableAgent OS — 防止AI降智、控制token成本、持续学习优化的智能代理操作系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0",
    "jinja2>=3.1.0",
]

[tool.vercel]
entrypoint = "web.server:app"
